<resources>
    <string name="app_name" translatable="false">United Messengers</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="vk" translatable="false">VK</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_code">Confirmation code</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Cancel</string>
    <string name="action_next">Next</string>
    <string name="login_text">Login</string>
    <string name="enter_message_hint">Message…</string>
    <string name="enter_phone_hint">+79*********</string>
    <string name="enter_code_hint">Security code</string>
    <string name="enter_password_hint">Password</string>
    <string name="members">Members: %1$s</string>
    <string name="online">Online</string>
    <string name="bot">Bot</string>
    <string name="outgoing">You:</string>
    <string name="last_seen">Was online at: %1$s</string>
    <string name="reduce_messages_count" translatable="false">%1$sk</string>
    <integer name="com_vk_sdk_AppId">6121396</integer>
    <integer name="telegram_api_id">18101985</integer>
    <string name="telegram_api_hash" translatable="false">267c7593ce626d6c0afcba3534e09d94</string>
    <string name="sticker">Sticker</string>
    <string name="photo">Photo</string>
    <string name="doc">File</string>
    <string name="audio">Audio</string>
    <string name="market_album">Selection of products</string>
    <string name="gift">Gift</string>
    <string name="wall">Post</string>
    <string name="video">Video</string>
    <string name="link">Link</string>
    <string name="market">Product</string>
    <string name="wall_reply">Comment</string>
    <string name="attachment">Attachment</string>
    <string name="recently">recently</string>
    <string name="unknown">unknown</string>
    <string name="last_month">last month</string>
    <string name="last_week">last week</string>
    <string name="login_to_account">First you need to log in</string>
    <string name="unavailable">Currently unavailable</string>
    <string name="in_develop">This feature is under development</string>
    <string name="ok">OK</string>
    <string name="to_bottom">Scroll to bottom</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="copied_toast">Copied</string>
    <string name="messages_search">Search in messages</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="description_more">Additionally</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_one_message_confirm">Do you really want to delete this message?</string>
    <string name="delete_one_message_for_all_confirmation">Do you really want to delete this message for everyone?</string>
    <string name="delete_for_all">Delete for all</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_message">Edit Message</string>
    <string name="recipient_list">Recipient list</string>
    <string name="empty_list">The list is empty</string>
    <string name="text">Text</string>
    <string name="send">Send</string>
    <string name="mailing">Mailing</string>
    <string name="add_to_mailing">Add to mailing</string>
    <string name="mailing_toast_message">Mailing list started</string>
</resources>