<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.progcorp.unitedmessengers.ui.login.telegram.TelegramAuthViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_64sdp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textStyle="bold"
            android:text="@string/telegram"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:text="@string/login_text"/>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <LinearLayout
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/phoneText"
                    android:hint="@string/enter_phone_hint"
                    android:text="@={viewmodel.phoneNumberText}"
                    android:inputType="phone"
                    android:autofillHints="phone"
                    style="@style/Widget.UM.EditText.Login"/>

                <Button
                    android:id="@+id/phoneSend"
                    android:onClick="@{() -> viewmodel.insertPhoneNumber()}"
                    android:text="@string/action_next"
                    app:icon="@drawable/arrow_right"
                    style="@style/Widget.UM.Button.Login"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/securityCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <EditText
                    android:id="@+id/codeText"
                    android:hint="@string/enter_code_hint"
                    android:text="@={viewmodel.codeText}"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    style="@style/Widget.UM.EditText.Login"/>

                <Button
                    android:id="@+id/codeSend"
                    android:onClick="@{() -> viewmodel.insertCode()}"
                    android:text="@string/action_login"
                    app:icon="@drawable/ic_login"
                    style="@style/Widget.UM.Button.Login"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible">

                <EditText
                    android:id="@+id/passwordText"
                    style="@style/Widget.UM.EditText.Login"
                    android:hint="@string/enter_password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.passwordText}" />

                <Button
                    android:id="@+id/passwordSend"
                    style="@style/Widget.UM.Button.Login"
                    android:onClick="@{() -> viewmodel.insertPassword()}"
                    android:text="@string/action_login"
                    app:icon="@drawable/ic_login" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/logout"
            android:text="@string/action_logout"
            android:onClick="@{() -> viewmodel.logout()}"
            android:visibility="invisible"
            android:layout_marginTop="0dp"
            app:icon="@drawable/ic_cancel"
            style="@style/Widget.UM.Button.Login"/>
    </LinearLayout>
</layout>