<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.progcorp.unitedmessengers.ui.mailing.MailingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/mailing"
                app:navigationIcon="@drawable/ic_arrow_back">

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/conversations_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">
                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/ic_list_alt"
                        android:backgroundTint="?attr/colorOnBackground"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textColor="?attr/colorOnBackground"
                        android:layout_gravity="center_vertical"
                        android:text="@string/recipient_list"
                        android:paddingHorizontal="4dp"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingHorizontal="4dp"
                        android:text="@string/empty_list"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?attr/colorOnBackground"
                        android:visibility="@{viewmodel.listEmpty ? View.VISIBLE : View.INVISIBLE}" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:visibility="@{viewmodel.listEmpty ? View.INVISIBLE : View.VISIBLE}"
                        app:bind_mailing_list="@{viewmodel.conversationsList}"
                        app:itemAnimator="@{null}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/list_item_mailing_conversation" />

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/floating_action_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="end|bottom"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:contentDescription="@string/action_next"
                        android:enabled="true"
                        android:onClick="@{() -> viewmodel.confirmConversationsListPressed()}"
                        android:text="@string/action_next"
                        app:icon="@drawable/ic_arrow_follow" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/message_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">
                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/ic_edit_note"
                        android:backgroundTint="?attr/colorOnBackground"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textColor="?attr/colorOnBackground"
                        android:layout_gravity="center_vertical"
                        android:text="@string/enter_message_hint"
                        android:paddingHorizontal="4dp"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="16dp"
                        android:hint="@string/text"
                        app:startIconDrawable="@drawable/ic_sms">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:text="@={viewmodel.messageText}"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/floating_action_button_send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="end|bottom"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:contentDescription="@string/send"
                        android:enabled="@{viewmodel.messageText.length() > 0}"
                        android:onClick="@{() -> viewmodel.sendPressed()}"
                        android:text="@string/send"
                        app:icon="@drawable/ic_send" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>
