<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.progcorp.unitedmessengers.ui.conversations.telegram.TelegramConversationsViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{viewmodel.layoutState == viewmodel.layoutState.LOGGED_ID ? View.GONE : View.VISIBLE}"
                android:padding="@dimen/_24sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:text="@string/telegram"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/login_text"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:animateLayoutChanges="true">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/login"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:text="@string/action_login"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13ssp"
                            android:textStyle="bold"
                            android:onClick="@{() -> viewmodel.goToLoginPressed()}"
                            app:cornerRadius="@dimen/_8sdp"/>

                    </FrameLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="?attr/actionBarSize"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:padding="@dimen/_3sdp"
                android:visibility="@{viewmodel.layoutState == viewmodel.layoutState.LOGGED_ID ? View.VISIBLE : View.INVISIBLE}"
                app:bind_conversations_list="@{viewmodel.conversationsList}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:visibility="invisible"
                tools:listitem="@layout/list_item_conversation" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>